fix mobile zoom scaling and certifications carousel container horizontal overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1142,6 +1142,7 @@ body.light-theme .moon {
 .credential-carousel-wrapper {
   position: relative;
   width: 100%;
+  overflow: hidden;
 }
 
 .marquee-btn {
